--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,13 @@
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/carter_one"
-        android:textSize="20sp"
-        android:textColor="#fff"
-        android:text="@string/app_name"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:text="@string/app_name"
+        android:textColor="#fff"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/city"
         android:layout_width="wrap_content"
@@ -103,4 +101,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+   <TextView
+       android:id="@+id/refresh"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toTopOf="@id/logo"
+       app:layout_constraintBottom_toBottomOf="@id/logo"
+       app:layout_constraintRight_toRightOf="parent"
+       android:padding="10dp"
+       android:text="yenile"
+       android:onClick="refresh"
+       android:layout_marginRight="10dp"/>
 </android.support.constraint.ConstraintLayout>
